Fix Cards layout on tablet

--- a/src/features/hover-sidedock.scss
+++ b/src/features/hover-sidedock.scss
@@ -117,7 +117,7 @@ body:not(.is-mobile).hover-ribbon.show-ribbon {
       padding-left: 52px;
     }
     &:not(.tab-top-left-stacked).css-settings-manager .workspace-ribbon.mod-left:not(.is-collapsed):not(:hover) ~ .mod-sidedock.mod-left-split .mod-top-left-space .workspace-tab-header-container,
-    .workspace-ribbon.mod-left.is-collapsed ~ .mod-root .workspace-tab-header-container {
+    .workspace-ribbon.mod-left.is-collapsed ~ .mod-root > div:first-of-type .workspace-tab-header-container {
       padding-left: 88px;
     }
   }
