--- a/src/layouts/cards.scss
+++ b/src/layouts/cards.scss
@@ -1,9 +1,9 @@
 body:is(.layout-cards, .layout-border):not(.is-mobile) {
   // Editor panel
-  &:not(.show-ribbon:not(.hover-ribbon)) .workspace:not(.is-left-sidedock-open) .mod-root .workspace-tabs:first-of-type .workspace-tab-container {
+  &:not(.show-ribbon:not(.hover-ribbon)) .workspace:not(.is-left-sidedock-open) .mod-root > div:first-of-type .workspace-tab-container {
     margin-left: 8px;
   }
-  .workspace:not(.is-right-sidedock-open) .mod-root .workspace-tabs:last-of-type .workspace-tab-container {
+  .workspace:not(.is-right-sidedock-open) .mod-root > div:last-of-type .workspace-tab-container {
     margin-right: 8px;
   }
 
@@ -93,21 +93,14 @@ body:is(.layout-cards, .layout-border):not(.is-mobile) {
 // Tablet
 body:is(.layout-cards, .layout-border).is-tablet {
   // Editor panel
-  .workspace.is-left-sidedock-open.is-right-sidedock-open .mod-root {
+  .mod-root {
     padding-bottom: 8px;
-    height: auto;
   }
-  .workspace-drawer.mod-left:not(.is-pinned) + .mod-root .workspace-tabs:first-of-type .workspace-tab-container {
+  .workspace-drawer.mod-left:not(.is-pinned) + .mod-root > div:first-of-type .workspace-tab-container {
     margin-left: 8px;
-    border-top-left-radius: var(--safe-area-inset-top);
-    border-bottom-left-radius: var(--safe-area-inset-top);
-    border-left-width: var(--divider-width);
   }
-  .mod-root:has(+ .workspace-drawer.mod-right:not(.is-pinned)) .workspace-tabs:last-of-type .workspace-tab-container {
+  .mod-root:has(+ .workspace-drawer.mod-right:not(.is-pinned)) > div:last-of-type .workspace-tab-container {
     margin-right: 8px;
-    border-top-right-radius: var(--safe-area-inset-top);
-    border-bottom-right-radius: var(--safe-area-inset-top);
-    border-right-width: var(--divider-width);
   }
 
   // Side panels
@@ -122,10 +115,6 @@ body:is(.layout-cards, .layout-border).is-tablet {
     .workspace-drawer-ribbon,
     .workspace-drawer-inner {
       padding-block: 0px 16px;
-    }
-    .nav-buttons-container:after,
-    .workspace-drawer-tab-options.is-collapsed {
-      --mobile-sidebar-background: var(--background-primary);
     }
   }
 
@@ -157,17 +146,19 @@ body:is(.layout-cards, .layout-border).is-tablet {
 }
 
 // Cards specific
+body.layout-cards:not(.is-phone) {
+  // Editor panel
+  .workspace-split.mod-vertical {
+    gap: 8px;
+  }
+  .workspace-split > * > .workspace-leaf-resize-handle:not(:hover) {
+    border-color: transparent;
+  }
+}
 body.layout-cards:not(.is-mobile) {
   // Editor panel
   .workspace-split.mod-root .workspace-tabs {
     overflow: visible;
-  }
-  .workspace-split.mod-vertical {
-    gap: 8px;
-  }
-
-  .workspace-split > * > .workspace-leaf-resize-handle:not(:hover) {
-    border-color: transparent;
   }
   .workspace-split.mod-vertical > * > .workspace-leaf-resize-handle {
     border-inline-end-width: 8px;
